[package]
name = "gggame"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
tokio = { version= "1", features = ["macros", "rt-multi-thread", "signal", "net", "fs"] }
serde_json = "1"
clap = { version = "4.2.7", features = ["derive"] }
tracing = "0.1.41"
tokio-util = "0.7.16"
maplit = "1.0.2"
futures = "0.3.28"
tracing-subscriber = "0.3.19"
axum = "0.8.4"
